chore: update reference-service to use latest spring-base features