@@ -13,6 +13,7 @@
         <spring-middleware.api.version>1.0.0</spring-middleware.api.version>
         <spring-middleware.app.version>1.3.0</spring-middleware.app.version>
         <spring-middleware.mongo-core.version>1.1.0</spring-middleware.mongo-core.version>
+        <spring-middleware.graphql.version>1.0.0</spring-middleware.graphql.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,7 +46,37 @@
                 <artifactId>app</artifactId>
                 <version>${spring-middleware.app.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.github.spring-middleware</groupId>
+                <artifactId>mongo-core</artifactId>
+                <version>${spring-middleware.mongo-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.spring-middleware</groupId>
+                <artifactId>graphql</artifactId>
+                <version>${spring-middleware.graphql.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
